--- a/src/css/quasar.variables.scss
+++ b/src/css/quasar.variables.scss
@@ -11,6 +11,9 @@
 // It's highly recommended to change the default colors
 // to match your app's branding.
 // Tip: Use the "Theme Builder" on Quasar's documentation website.
+@import url('https://fonts.googleapis.com/css2?family=Comfortaa:wght@300..700&display=swap');
+
+$typography-font-family : 'Comfortaa', sans-serif !default;
 
 $primary   : #1976D2;
 $secondary : #26A69A;
